tests/analyze/wire-reject-opaque/analyze.snap
---
source: tests/analyze.rs
expression: output
---
warning: Name `encoded` is never used.
> 5 | 	let encoded = wire.to-wire t
           ^^^^^^^

error: Can't send `token` across the wire: the opaque type `token` hides its constructors — give it a hand-written `wire` instance.
> 5 | 	let encoded = wire.to-wire t
                     ^^^^^^^^^^^^
